# green-dot

./: .gitignore  .npmignore  CHANGELOG.md  GUI_SETUP.md  LICENSE  README.md  package.json  tauri.conf.json
.github/workflows/: npm-publish.yml
lib/: config.js  launcher.js  menu.js  postinstall.js  utils.js
public/: premium.css
scripts/: KeepActive.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  package.json  styles.css
web/: .gitignore  README.md  app.js  bresha-pro.html  bresha-teams.html  bresha.html  index.html  manifest.json  style.css  vercel.json
