[package]
name = "green-dot"
version = "2.0.0"
description = "Keep your Teams & Messenger status green - AI-powered presence keeper"
authors = ["Geo Pricop <pricopgeorge@gmail.com>"]
license = "MIT"
repository = "https://github.com/Gzeu/green-dot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "notification", "system-tray", "shell-open"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true