[package]
name = "green-dot"
version = "2.0.0"
description = "Keep your Teams & Messenger status green - AI-powered presence keeper"
authors = ["Geo Pricop <pricopgeorge@gmail.com>"]
license = "MIT"
repository = "https://github.com/Gzeu/green-dot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["notification-all", "system-tray", "shell-open"] }
tauri-plugin-shell = "1"
tauri-plugin-notification = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"